--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bower": "^1.3.1",
     "shelljs": "^0.2.6",
     "karma-junit-reporter": "^0.2.2",
-    "bootstrap": "latest"
+    "bootstrap": "latest",
+    "wechat": "1.2.1"
   },
   "scripts": {
     "postinstall": "bower install",
