--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "angular-mocks": "~1.2.x",
     "html5-boilerplate": "~4.3.0",
     "angular-resource": "~1.3.0",
-    "angular-ui-router": "0.2.13"
+    "angular-ui-router": "0.2.13",
+    "ng-file-upload-shim": "latest",
+    "ng-file-upload": "latest"
   }
 }
