--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bootstrap": "latest",
     "wechat": "1.2.1",
     "passport-wechat": "0.1.2",
-    "passport": "latest"
+    "passport": "latest",
+    "gridfs-stream": "latest"
   },
   "scripts": {
     "postinstall": "bower install",
@@ -35,6 +36,7 @@
   "dependencies": {
     "body-parser": "^1.11.0",
     "method-override": "^2.3.1",
-    "morgan": "^1.5.1"
+    "morgan": "^1.5.1",
+    "connect-multiparty": "latest"
   }
 }
