--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular-resource": "~1.3.0",
     "angular-ui-router": "0.2.13",
     "ng-file-upload-shim": "latest",
-    "ng-file-upload": "latest"
+    "ng-file-upload": "latest",
+    "angular-carousel": "latest"
   }
 }
