--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "angular-ui-router": "0.2.13",
     "ng-file-upload-shim": "latest",
     "ng-file-upload": "latest",
-    "angular-carousel": "latest"
+    "angular-carousel": "latest",
+    "angular-dragdrop": "latest",
+    "angular-gestures": "latest"
   }
 }
